--- a/.air.toml
+++ b/.air.toml
@@ -4,8 +4,8 @@ tmp_dir = "tmp"
 
 [build]
   args_bin = []
-  bin = "./tmp/main serve"
-  cmd = "go build -o ./tmp/main ."
+  bin = "./tmp/puddlee serve"
+  cmd = "go build -o ./tmp/puddlee ."
   delay = 1000
   exclude_dir = ["assets", "tmp", "vendor", "testdata"]
   exclude_file = []
