--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,24 +1,21 @@
-name: Build and Deploy
+name: deploy
 on:
   push:
-    branches:
-      - chore/13/devDeploy
+    branches: chore/13/devDeploy
 jobs:
-  build-and-deploy:
-    concurrency: ci-${{ github.ref }} # Recommended if you intend to make multiple deployments in quick succession.
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v3
-      - name: Install Go Environment
-        uses: actions/setup-go@v4
+      - uses: actions/checkout@v3.3.0
+      - name: execute remote ssh & deploy backend server
+        uses: appleboy/ssh-action@master
         with:
-          go-version: '^1.21.4'
-      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
-        run: |
-          go build -o ./build/puddlee .
-
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          folder: build # The folder the action should deploy.
+          host: ${{ secrets.REMOTE_SSH_HOST }}
+          username: ${{ secrets.REMOTE_SSH_USERNAME }}
+          key: ${{ secrets.REMOTE_SSH_KEY }}
+          port: ${{ secrets.REMOTE_SSH_PORT }}
+          script: |
+            cd ~/deploy
+            sudo git pull origin chore/13/devDeploy
+            docker-compose build
+            docker-compose up -d
